log/build_2024-06-11_16-00-31/adhoc/stderr.log
  File "/home/greatshuhang/ros2_ws/install/adhoc/lib/python3.10/site-packages/adhoc/video_subscriber.py", line 126
    if self.last_save_time is None or current_time - self.last_save�time >= self.interval:
                                                                   ^
SyntaxError: invalid character '�' (U+FFFD)

